manifests/deployment-persistent.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      volumes:
        - name: shared-logs
          persistentVolumeClaim:
           claimName: log-output-claim
      containers:
        - name: writer
          image: j0ne/log_output:writer-latest-4
          volumeMounts: # Mount volume
          - name: shared-logs
            mountPath: /usr/src/files
        - name: reader
          image: j0ne/log_output:reader-latest-3.1
          volumeMounts: # Mount volume
          - name: shared-logs
            mountPath: /usr/src/files
        - name: pingpong
          image: j0ne/pingpong:write-latest-3
          volumeMounts: # Mount volume
          - name: shared-logs
            mountPath: /usr/src/files
