manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: devops-w-kube
  name: log-output-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      volumes: # Define volume
        - name: log-files
          emptyDir: {}
      containers:
        - name: writer
          image: j0ne/log_output:writer-latest-6-env
        - name: reader
          image: j0ne/log_output:reader-latest-3.1
          volumeMounts: # Mount volume
          - name: log-files
            mountPath: /usr/src/files

# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: log-output-dep
# spec:
#   replicas: 1
#   selector:
#     matchLabels:
#       app: log-output
#   template:
#     metadata:
#       labels:
#         app: log-output
#     spec:
#       containers:
#         - name: log-output
#           image: j0ne/log_output:1.2
